keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__base_multiple-2.snap
---
source: keyvalues-parser/src/text/tests.rs
expression: rendered

---
#base "one_base.res"
#base "../another_base.vdf"
#base "other\path\sep.pop"

"Key"
{
}

