keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__base_multiple.snap
---
source: keyvalues-parser/src/text/tests.rs
expression: vdf

---
PartialVdf(
  key: "Key",
  value: Obj(Obj({})),
  bases: [
    "one_base.res",
    "../another_base.vdf",
    "other\\path\\sep.pop",
  ],
)
