keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__base_quoted-2.snap
---
source: keyvalues-parser/src/text/tests.rs
expression: rendered

---
#base "some/base.vdf"

"Key"
{
}

